<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JournEasy</string>
    <string name="start_loc"><i>Start Location</i></string>
    <string name="dest_loc"><i>Destination</i></string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="get_me">Get me there!</string>
    <string name="settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings Menu</string>
    <string name="radio_school">Avoid Schools during peak periods</string>
    <string name="radio_crime">Avoid high crime areas</string>
    <string name="radio_traffic">Avoid live traffic disruptions</string>
    <string name="radio_blackspot">Avoid traffic blackspots</string>
    <string name="radio_bike">Use my own bicycle</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="preference_file_key">com.cs247.journeasy.PREFERENCE_FILE_KEY</string>
    <string name="saved_school_check">saved_school_check</string>
    <string name="saved_crime_check">saved_crime_check</string>
    <string name="saved_traffic_check">saved_traffic_check</string>
    <string name="saved_blackspot_check">saved_blackspot_check</string>
    <string name="saved_bike_check">saved_bike_check</string>
    <string name="mapQuest_Key">Fmjtd%7Cluub2l07nh%2Ca2%3Do5-96ysd6</string>
    <string name="saved_start_location">start_location</string>
    <string name="saved_end_location">end_location</string>
</resources>