<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenu" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:src="@drawable/journeasylogo" 
        android:contentDescription="@string/logo"/>

    <EditText
        android:id="@+id/startLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:ems="10"
        android:hint="@string/start_loc" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/destinationLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/logo"
        android:layout_alignLeft="@+id/startLocation"
        android:ems="10"
        android:hint="@string/dest_loc" >

	</EditText>

    <TextView
        android:id="@+id/fromText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/startLocation"
        android:layout_alignBottom="@+id/startLocation"
        android:layout_toLeftOf="@+id/startLocation"
        android:text="@string/from"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/toText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/destinationLocation"
        android:layout_alignBottom="@+id/destinationLocation"
        android:layout_alignRight="@+id/fromText"
        android:text="@string/to"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/settings"
        android:onClick="settingsButtonPressed" />

    <Button
        android:id="@+id/getMeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toText"
        android:layout_centerHorizontal="true"
        android:text="@string/get_me"
        android:onClick="sendMessagesToMap" />

</RelativeLayout>