<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:maxHeight="150dp"
        android:src="@drawable/journeasylogo"
        android:contentDescription="@string/logo"/>

    <CheckBox
        android:id="@+id/schoolButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:text="@string/radio_school"
        android:onClick="schoolCheck" />

    <CheckBox
        android:id="@+id/trafficButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/schoolButton"
        android:layout_below="@+id/schoolButton"
        android:onClick="trafficCheck"
        android:text="@string/radio_traffic" />

    <CheckBox
        android:id="@+id/bikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/trafficButton"
        android:layout_below="@+id/trafficButton"
        android:onClick="bikeCheck"
        android:text="@string/radio_bike" />

</RelativeLayout>